--- a/styles/style.css
+++ b/styles/style.css
@@ -837,10 +837,6 @@ main {
     border-radius: 1.375rem 0.375rem 0.375rem 1.375rem;
 }
 
-#menu_email_button {
-    border-radius: 1.375rem 1.375rem 0.375rem 1.375rem;
-}
-
 #menu_links {
     row-gap: 0.375rem;
 }
@@ -882,7 +878,7 @@ main {
     }
 }
 
-#menu_button_wrapper>a:nth-of-type(2) {
+#menu_button_wrapper>#menu_button--close {
     z-index: -1;
 }
 
@@ -1022,6 +1018,28 @@ body {
 
 #menu_dropdown #menu_dropdown_light-mode svg {
     color: var(--yellow);
+}
+
+
+/* Dialog */
+
+.dialog-backdrop {
+    pointer-events: none;
+    position: fixed;
+    overflow-y: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+}
+
+.dialog-backdrop.active {
+    pointer-events: all;
+}
+
+.has-dialog {
+    overflow: hidden;
 }
 
 
@@ -1328,6 +1346,34 @@ body {
 
 /* Modal - Archive */
 
+#modal_archive-content {
+    grid-auto-flow: row;
+    /* grid-template-columns: minmax(20%, max-content) minmax(0, 1fr);
+    gap: 3rem; */
+}
+
+#modal_archive-content > div:nth-child(2n+1) {
+    padding-bottom: 3rem;
+}
+
+#modal_archive-content > div:nth-child(2n):not(:last-child) {
+    padding-bottom: 6rem;
+}
+
+@media (min-width: 45rem) {
+    #modal_archive-content {
+        grid-template-columns: minmax(20%, max-content) minmax(0, 1fr);
+        gap: 3rem;
+    }
+
+    #modal_archive-content > div:nth-child(2n+1) {
+        padding-bottom: unset;
+    }
+}
+
+
+/* Modal - Archive - Carousel */
+
 [data-carousel] {
     position: relative;
     display: flex;
@@ -1429,8 +1475,14 @@ body {
     display: block;
     width: 100%;
     justify-content: center;
-    flex: 1 0 calc(50% - calc(var(--slide-offset) * 2));
+    flex: 1 0 calc(100% - calc(var(--slide-offset) * 2));
     scroll-snap-align: start;
+}
+
+@media (min-width: 45rem) {
+    [data-carousel-slides] figure {
+        flex: 1 0 calc(50% - calc(var(--slide-offset) * 2));
+    }
 }
 
 /* [data-carousel-slides] figure:last-child {
