--- a/styles/animation.css
+++ b/styles/animation.css
@@ -376,29 +376,29 @@ svg.animate-face-icon path {
     background-color: var(--highlight-secondary);
 }
 
-#menu_links>a[href="#profile"]:hover, #menu_links>a[href="#profile"]:focus, #menu_links>a[href="#profile"].tooltip-key--active {
+a#menu_link_profile:hover, a#menu_link_profile:focus, a#menu_link_profile.tooltip-key--active {
     background-color: var(--highlight-primary);
 }
 
-#menu_links>a svg, #menu_email_button>div svg {
+#menu_links>a svg, #menu_email_button-wrapper>button svg {
     transition: color var(--animate-out-segment-2\/3) linear;
     transform: translate3d(0,0,0);
     color: var(--icon);
 }
 
-#menu_links>a:hover svg, #menu_links>a:focus svg, #menu_email_button>div:hover svg, #menu_email_button>div:focus svg {
+#menu_links>a:hover svg, #menu_links>a:focus svg, #menu_email_button-wrapper>button:hover svg, #menu_email_button-wrapper>button:focus svg {
     transition: color var(--animate-in-segment-2\/3) linear;
     transform: translate3d(0,0,0);
     color: var(--icon-hover);
 }
 
-#menu_links>a span.button-label, #menu_email_button>div span.button-label {
+#menu_links>a span.button-label, #menu_email_button-wrapper>button span.button-label {
     transition: color var(--animate-out-segment-2\/3) linear;
     transform: translate3d(0,0,0);
     color: var(--text-2);
 }
 
-#menu_links>a:hover span.button-label, #menu_links>a:focus span.button-label, #menu_email_button>div:hover span.button-label, #menu_email_button>div:focus span.button-label {
+#menu_links>a:hover span.button-label, #menu_links>a:focus span.button-label, #menu_email_button-wrapper>button:hover span.button-label, #menu_email_button-wrapper>button:focus span.button-label {
     transition: color var(--animate-in-segment-2\/3) linear;
     transform: translate3d(0,0,0);
     color: var(--text-1);
@@ -428,11 +428,21 @@ svg.animate-face-icon path {
     z-index: 6;
 }
 
-#menu:target #menu_button--close {
-    z-index: 7;
+#menu:target #menu_button--open {
+    visibility: hidden;
 }
 
-#menu_button_wrapper:hover #menu_button, #menu_button_wrapper.tooltip-key--active #menu_button, #menu:target #menu_button {
+#menu_button--close {
+    z-index: -1;
+    visibility: hidden;
+}
+
+#menu:target #menu_button--close {
+    z-index: 7;
+    visibility: visible;
+}
+
+#menu_button-wrapper:hover #menu_button, #menu_button-wrapper.tooltip-key--active #menu_button, #menu:target #menu_button {
     transition: color var(--animate-in-segment-2\/3) linear,  background-color var(--animate-in-segment-2\/3) linear;
     transform: translate3d(0,0,0);
     color: var(--icon-hover);
@@ -782,20 +792,20 @@ svg.animate-face-icon path {
     z-index: 2;
 }
 
-.modal .modal_content {
+.modal .modal-content {
     visibility: hidden;
 }
 
-#modal_profile .modal_content,
-#modal_archive .modal_content {
+#modal_profile .modal-content,
+#modal_archive .modal-content {
     transition: opacity var(--animate-out-segment) linear, transform var(--animate-out-segment) var(--ease-in-quad), visibility 0s var(--animate-out-segment);
     transform: translate3d(0,0,0);
     transform: scale(1.05);
     transform-origin: top;
 }
 
-#profile:target~main #modal_profile .modal_content,
-#archive:target~main #modal_archive .modal_content {
+#profile:target~main #modal_profile .modal-content,
+#archive:target~main #modal_archive .modal-content {
     visibility: visible;
     transition: opacity var(--animate-in-segment) linear, transform var(--animate-in-segment) var(--ease-out-quad);
     transform: translate3d(0,0,0);
@@ -826,7 +836,7 @@ svg.animate-face-icon path {
 
 /* Modals - Horizontal Timeline */
 
-#horizontal-timeline_wrapper {
+#horizontal-timeline-wrapper {
     transition: opacity var(--animate-out-segment) linear, transform var(--animate-out-segment) var(--ease-in-quad), visibility 0s var(--animate-out-segment);
     visibility: hidden;
     transform: scale(0.95);
@@ -834,7 +844,7 @@ svg.animate-face-icon path {
     opacity: 0;
 }
 
-#archive:target~main #modal_archive #horizontal-timeline_wrapper {
+#archive:target~main #modal_archive #horizontal-timeline-wrapper {
     visibility: visible;
     transition: opacity var(--animate-in-segment) linear var(--delay-segment), transform var(--animate-in-segment) var(--ease-out-quad) var(--delay-segment);
     transform: scale(1);
@@ -952,6 +962,7 @@ svg.animate-face-icon path {
 }
 
 #underlay_menu {
+    visibility: hidden;
     backdrop-filter: blur(0.125rem);
     -webkit-backdrop-filter: blur(0.125rem);
 }
@@ -962,6 +973,7 @@ svg.animate-face-icon path {
 }
 
 #debug:not(:checked)~main #menu:target #underlay_menu {
+    visibility: visible;
     z-index: 5;
     pointer-events: auto;
     opacity: 1;
@@ -981,14 +993,14 @@ svg.animate-face-icon path {
 
 /* Tooltip */
 
-.tooltip_wrapper .tooltip {
+.tooltip-wrapper .tooltip {
     transition: var(--animate-out-segment-2\/3) linear;
     opacity: 0;
 
 }
 
-.tooltip_wrapper:hover:not(.tooltip-key--active) .tooltip:not(.tooltip--active), .tooltip_wrapper:focus-within:not(.tooltip-key--active) .tooltip:not(.tooltip--active),
-.tooltip_wrapper.tooltip-key--active .tooltip.tooltip--active, .tooltip_wrapper:focus-within.tooltip-key--active .tooltip.tooltip--active {
+.tooltip-wrapper:hover:not(.tooltip-key--active) .tooltip:not(.tooltip--active), .tooltip-wrapper:focus-within:not(.tooltip-key--active) .tooltip:not(.tooltip--active),
+.tooltip-wrapper.tooltip-key--active .tooltip.tooltip--active, .tooltip-wrapper:focus-within.tooltip-key--active .tooltip.tooltip--active {
     transition: var(--animate-in-segment-2\/3) linear var(--delay-segment-1\/3);
     opacity: 1;
 }
