--- a/styles/state.css
+++ b/styles/state.css
@@ -2,6 +2,67 @@
  * State
  */
 
+/* Light mode */
+
+#mode:checked~main {
+    --background: #ffffff;
+    --background-pattern: url("data:image/svg+xml,%3Csvg width='48' height='48' viewBox='0 0 48 48' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='23' y='23' width='2' height='2' fill='%2389C2CE'/%3E%3C/svg%3E%0A");
+    --triangle: rgba(0, 203, 226, 0), rgba(0, 203, 226, 1);
+    --triangle-stripe: rgba(180, 236, 248, 0), rgba(180, 236, 248, 1);
+    --text-1: var(--cyan-full-10);
+    --text-2: var(--cyan-quarter-30);
+    --text-3: var(--cyan-quarter-65);
+    --highlight-primary: var(--blue-full-45);
+
+    --icon: var(--cyan-quarter-60);
+    --icon-bg: var(--cyan-quarter-75);
+    --icon-fg: var(--cyan-quarter-45);
+
+    --context-border-dark: var(--cyan-quarter-95);
+    --context-border-light: var(--cyan-quarter-75);
+    /* 210, 25, 70 */
+    --context-bg: rgba(176, 203, 210, 0.5);
+
+    --modal-border-inner: var(--cyan-quarter-95);
+    --modal-border-outer: var(--cyan-full-75);
+    --modal-bg: var(--cyan-three-quarters-95);
+    /* 210, 100, 70 */
+    --modal-bg-blur: rgba(0, 188, 210, 0.45), rgba(0, 188, 210, 0.15);
+
+    --modal-icon-outer-bg: var(--cyan-half-65);
+    --modal-icon-outer: var(--cyan-half-95);
+
+    --modal-tag-bg: var(--cyan-three-quarters-80);
+
+    --footer-square-1: var(--highlight-primary);
+    --footer-square-1-hover: var(--navy);
+    --footer-square-2: var(--cyan-full-45);
+    --footer-square-3: var(--cyan-full-65);
+    --footer-square-4: var(--cyan-full-85);
+    --footer-rectangle: var(--cyan-quarter-85);
+}
+
+#mode:checked~main #logo span {
+    background-image: url(../images/logo-animated-light.svg)
+}
+
+#mode:not(:checked)~main #menu_dropdown label#menu_dropdown_light-mode {
+    display: flex;
+}
+
+#mode:checked~main #menu_dropdown label#menu_dropdown_light-mode {
+    display: none;
+}
+
+#mode:not(:checked)~main #menu_dropdown label#menu_dropdown_dark-mode {
+    display: none;
+}
+
+#mode:checked~main #menu_dropdown label#menu_dropdown_dark-mode {
+    display: flex;
+}
+
+
 /* Debug */
 
 #debug:checked~main .debug-checked\:flex {
@@ -12,7 +73,91 @@
     display: none;
 }
 
-/* TODO move all checked and target selectors here? */
+/* Debug - Dark mode */
+
+#mode:not(:checked)~#debug:checked~main * {
+    outline: max(1px, 0.0625rem) solid var(--blue-full-55);
+    outline-offset: min(-1px, -0.0625rem);
+    transition: none !important;
+}
+
+#mode:not(:checked)~#debug:checked~main #debug-grid * {
+    outline: none !important;
+}
+
+#mode:not(:checked)~#debug:checked~main #debug-grid {
+    visibility: visible !important;
+}
+
+#mode:not(:checked)~#debug:checked~main #debug-grid #debug-grid-fill {
+    color: var(--blue-full-35);
+}
+
+#mode:not(:checked)~#debug:checked~main #debug-grid #debug-grid-outline {
+    color: var(--blue-full-25);
+}
+
+/* Debug - Light mode */
+
+#mode:checked~#debug:checked~main * {
+    outline: max(1px, 0.0625rem) solid var(--blue-full-45) !important;
+    outline-offset: min(-1px, -0.0625rem);
+}
+
+#mode:checked~#debug:checked~main #debug-grid * {
+    outline: none !important;
+}
+
+#mode:checked~#debug:checked~main #debug-grid {
+    visibility: visible !important;
+}
+
+#mode:checked~#debug:checked~main #debug-grid #debug-grid-fill {
+    color: var(--blue-full-65);
+}
+
+#mode:checked~#debug:checked~main #debug-grid #debug-grid-outline {
+    color: var(--blue-full-55);
+}
+
+
+/* Menu Button */
+
+#menu:target #menu_button {
+    z-index: 6;
+}
+
+#menu:target #menu_button--open {
+    visibility: hidden;
+}
+
+#menu:target #menu_button--close {
+    z-index: 7;
+    visibility: visible;
+}
+
+
+/* Triangle - Flicker */
+
+#profile:target~main .animate-flicker-triangle-light::after,
+#archive:target~main .animate-flicker-triangle-light::after {
+    animation: none;
+}
+
+#profile:target~main .animate-flicker-triangle-shadow::after,
+#archive:target~main .animate-flicker-triangle-shadow::after {
+    animation: none;
+}
+
+
+/* Modals */
+
+#profile:target~main #modal_profile,
+#archive:target~main #modal_archive {
+    pointer-events: auto;
+    z-index: 2;
+}
+
 
 /* Modal - Profile */
 
@@ -24,6 +169,7 @@
     pointer-events: auto;
 }
 
+
 /* Modal - Archive */
 
 #archive:target~main #modal_archive {
@@ -32,4 +178,53 @@
 
 #archive:target~main #modal_archive .modal-content {
     pointer-events: auto;
+}
+
+#debug:checked~#archive:target~main::before {
+    content: '';
+    position: fixed;
+    inset: 0;
+    margin: auto 0;
+    width: 100%;
+    height: min(2px, 0.125rem);
+    background-color: var(--blue-full-65);
+    pointer-events: none;
+    z-index: 100;
+}
+
+#debug:checked~#archive:target~main [data-carousel-slides-wrapper]::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 50%;
+    bottom: 0;
+    left: 2.5rem;
+    border-width: min(2px, 0.125rem);
+    border-style: solid;
+    border-color: var(--blue-full-65);
+    pointer-events: none;
+    z-index: 15;
+}
+
+#debug:checked~#archive:target~main [data-carousel-slides] figure {
+    position: relative;
+}
+
+#debug:checked~#archive:target~main [data-carousel-slides] figure::before {
+    content: '';
+    position: absolute;
+    inset: 0 50% 0 0;
+    background: var(--blue-full-25);
+    z-index: 10;
+    pointer-events: none;
+    opacity: 0.5;
+}
+
+#debug:checked~#archive:target~main [data-carousel-slides] figure.active::before {
+    background: var(--blue-full-45);
+}
+
+#debug:checked~#archive:target~main [data-carousel-slides] figure a {
+    border: solid transparent;
+    border-width: max(1px, 0.0625rem);
 }
