--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 /*
+ * Style
  * Base64 embed fonts: https://amio.github.io/embedded-google-fonts/
  * Icons: https://fonts.google.com/icons?icon.style=Sharp
  * Font sizing: https://seek-oss.github.io/capsize/
@@ -171,22 +172,6 @@ main {
 }
 
 
-/* Light mode debug */
-
-#mode:checked~#debug:checked~main * {
-    outline: max(1px, 0.0625rem) solid var(--blue-full-45) !important;
-    outline-offset: min(-1px, -0.0625rem);
-}
-
-
-/* Dark mode debug */
-
-#mode:not(:checked)~#debug:checked~main * {
-    outline: max(1px, 0.0625rem) solid var(--blue-full-55);
-    outline-offset: min(-1px, -0.0625rem);
-}
-
-
 /* Debug grid */
 
 #debug-grid {
@@ -198,44 +183,7 @@ main {
 }
 
 
-/* Debug grid - light mode */
-
-#mode:checked~#debug:checked~main #debug-grid * {
-    outline: none !important;
-}
-
-#mode:checked~#debug:checked~main #debug-grid {
-    visibility: visible !important;
-}
-
-#mode:checked~#debug:checked~main #debug-grid #debug-grid-fill {
-    color: var(--blue-full-65);
-}
-
-#mode:checked~#debug:checked~main #debug-grid #debug-grid-outline {
-    color: var(--blue-full-55);
-}
-
-/* Debug grid - dark mode */
-
-#mode:not(:checked)~#debug:checked~main #debug-grid * {
-    outline: none !important;
-}
-
-#mode:not(:checked)~#debug:checked~main #debug-grid {
-    visibility: visible !important;
-}
-
-#mode:not(:checked)~#debug:checked~main #debug-grid #debug-grid-fill {
-    color: var(--blue-full-35);
-}
-
-#mode:not(:checked)~#debug:checked~main #debug-grid #debug-grid-outline {
-    color: var(--blue-full-25);
-}
-
-
-/* Dark mode (by default) */
+/* Dark mode (default) */
 
 body,
 html {
@@ -286,67 +234,6 @@ body {
 
 #logo span {
     background-image: url(../images/logo-animated-dark.svg)
-}
-
-
-/* Light mode in Dark mode */
-
-#mode:checked~main {
-    --background: #ffffff;
-    --background-pattern: url("data:image/svg+xml,%3Csvg width='48' height='48' viewBox='0 0 48 48' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='23' y='23' width='2' height='2' fill='%2389C2CE'/%3E%3C/svg%3E%0A");
-    --triangle: rgba(0, 203, 226, 0), rgba(0, 203, 226, 1);
-    --triangle-stripe: rgba(180, 236, 248, 0), rgba(180, 236, 248, 1);
-    --text-1: var(--cyan-full-10);
-    --text-2: var(--cyan-quarter-30);
-    --text-3: var(--cyan-quarter-65);
-    --highlight-primary: var(--blue-full-45);
-
-    --icon: var(--cyan-quarter-60);
-    --icon-bg: var(--cyan-quarter-75);
-    --icon-fg: var(--cyan-quarter-45);
-
-    --context-border-dark: var(--cyan-quarter-95);
-    --context-border-light: var(--cyan-quarter-75);
-    /* 210, 25, 70 */
-    --context-bg: rgba(176, 203, 210, 0.5);
-
-    --modal-border-inner: var(--cyan-quarter-95);
-    --modal-border-outer: var(--cyan-full-75);
-    --modal-bg: var(--cyan-three-quarters-95);
-    /* 210, 100, 70 */
-    --modal-bg-blur: rgba(0, 188, 210, 0.45), rgba(0, 188, 210, 0.15);
-
-    --modal-icon-outer-bg: var(--cyan-half-65);
-    --modal-icon-outer: var(--cyan-half-95);
-
-    --modal-tag-bg: var(--cyan-three-quarters-80);
-
-    --footer-square-1: var(--highlight-primary);
-    --footer-square-1-hover: var(--navy);
-    --footer-square-2: var(--cyan-full-45);
-    --footer-square-3: var(--cyan-full-65);
-    --footer-square-4: var(--cyan-full-85);
-    --footer-rectangle: var(--cyan-quarter-85);
-}
-
-#mode:checked~main #logo span {
-    background-image: url(../images/logo-animated-light.svg)
-}
-
-#mode:not(:checked)~main #menu_dropdown label#menu_dropdown_light-mode {
-    display: flex;
-}
-
-#mode:checked~main #menu_dropdown label#menu_dropdown_light-mode {
-    display: none;
-}
-
-#mode:not(:checked)~main #menu_dropdown label#menu_dropdown_dark-mode {
-    display: none;
-}
-
-#mode:checked~main #menu_dropdown label#menu_dropdown_dark-mode {
-    display: flex;
 }
 
 
@@ -1416,91 +1303,6 @@ body {
     touch-action: pan-x;
     /* mask-image: linear-gradient(90deg, rgba(0, 0, 0, 1) calc(100% - calc(var(--slide-offset) * 2)), rgba(0, 0, 0, 0) 100%); */
 }
-
-/* CSS styles for visual guidelines */
-[data-carousel-slides] figure {
-    position: relative;
-    border: 2px solid rgba(255, 0, 0, 0.5); /* Red border for observed elements */
-    background-color: rgba(0, 255, 0, 0.1); /* Light green background for observed elements */
-    transition: border-color 0.3s ease, background-color 0.3s ease;
-}
-
-/* Additional styles for active elements */
-[data-carousel-slides] figure.active {
-    border-color: rgba(0, 0, 255, 0.7); /* Blue border for active element */
-    background-color: rgba(0, 0, 255, 0.2); /* Light blue background for active element */
-}
-
-[data-carousel-slides] figure::after {
-    content: '';
-    position: absolute;
-    border: 1px dashed rgba(255, 0, 0, 0.5); /* Dashed border to visualize intersection */
-    pointer-events: none;
-    z-index: 10; /* Ensure it is above other content */
-}
-
-[data-carousel-slides] figure.active::after {
-    border-color: rgba(0, 0, 255, 0.7); /* Change dashed border color for active elements */
-}
-
-[data-carousel-slides] figure::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 255, 0.5); /* Blue overlay to visualize the threshold */
-    clip-path: inset(0 50% 0 0); /* Overlay is clipped to the size of the element */
-    z-index: 10; /* Ensure it is above other content */
-    pointer-events: none;
-    transition: clip-path 0.3s ease;
-}
-
-
-[data-carousel]::before {
-    content: '';
-    position: absolute;
-    top: 0; /* Adjust based on rootMargin top value */
-    right: 50%; /* Adjust based on rootMargin right value */
-    bottom: 0; /* Adjust based on rootMargin bottom value */
-    left: 2.5rem; /* Adjust based on rootMargin left value */
-    border: 2px dashed rgba(255, 0, 0, 0.75); /* Red dashed border to visualize margin */
-    pointer-events: none;
-    z-index: 15; /* Ensure it is above other content */
-    /* transform: translateX(100%); */
-}
-
-
-[data-timeline-section] {
-    position: relative;
-}
-[data-timeline-section]::before {
-    content: '';
-    position: absolute;
-    top: 0; /* Adjust based on rootMargin top value */
-    right: 0; /* Adjust based on rootMargin right value */
-    bottom: 0; /* Adjust based on rootMargin bottom value */
-    left: 0; /* Adjust based on rootMargin left value */
-    border: 2px dashed rgba(255, 0, 0, 0.75); /* Red dashed border to visualize margin */
-    pointer-events: none;
-    z-index: 15; /* Ensure it is above other content */
-    /* transform: translateX(100%); */
-    }
-
-    body::before {
-        content: '';
-        position: fixed;
-        z-index: 100;
-        top: 50%; /* Adjust based on rootMargin top value */
-        right: 0; /* Adjust based on rootMargin right value */
-        bottom: 50%; /* Adjust based on rootMargin bottom value */
-        left: 0; /* Adjust based on rootMargin left value */
-        border: 2px dashed rgba(255, 0, 0, 0.75); /* Red dashed border to visualize margin */
-        pointer-events: none;
-        z-index: 15; /* Ensure it is above other content */
-        /* transform: translateX(100%); */
-        }
 
 [data-carousel-slides]::-webkit-scrollbar {
     display: none;
